Fix column alignmnet

--- a/app/assets/stylesheets/_campsite.scss
+++ b/app/assets/stylesheets/_campsite.scss
@@ -109,7 +109,7 @@
         .column {
           float: left;
           display: inline;
-          margin-right: 100px;
+          margin-right: 50px;
         }
       }
     }
